--- a/sass/grid.css
+++ b/sass/grid.css
@@ -1,63 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@500&family=Poppins:wght@400;500;600&family=Roboto+Slab:wght@500&family=Yeseva+One&display=swap");
-@media (max-width: 968px) {
-  .container {
-    overflow-x: hidden;
-    padding: 0 15px;
-    width: 100%;
-    padding: 0 15px;
-  }
-  .col-sm {
-    grid-template-columns: 1fr;
-  }
-  .navbar {
-    width: 100%;
-    display: block;
-    left: 0;
-    top: 0;
-  }
-  .navbar-list {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background: white;
-    z-index: 20;
-    left: 0;
-    position: absolute;
-    top: 0;
-    height: 100vh;
-    width: 100vw;
-    transform: translateX(100%);
-    transition: 0.3s ease-out;
-    overflow-x: hidden;
-  }
-  .active .navbar-list {
-    transform: translateX(0%);
-    transition: 0.3s ease-in;
-  }
-  .navbar-menu {
-    position: absolute;
-    display: block;
-    z-index: 999;
-    top: 151px;
-    right: 80px;
-  }
-  .active.navbar-menu span:nth-child(2) {
-    opacity: 0;
-  }
-  .active.navbar-menu span:nth-child(1) {
-    transform: translateY(6px) rotate(45deg);
-  }
-  .active.navbar-menu span:nth-child(3) {
-    transform: translateY(-6px) rotate(-45deg);
-  }
-}
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
   font-family: "Poppins", sans-serif;
-  width: 100%;
+  overflow-x: hidden;
 }
 
 .swiper {
@@ -95,6 +44,20 @@ img {
 
 a {
   text-decoration: none;
+  color: #010D00;
+  line-height: 1.75rem;
+  font-weight: 500;
+  padding-bottom: 16px;
+}
+a:hover {
+  color: #F21D44;
+  border-bottom: 1px solid #F21D44;
+  transition: all 0.3s ease-in;
+}
+a:active {
+  color: #F21D44;
+  border-bottom: 1px solid #F21D44;
+  transition: all 0.3s ease-in;
 }
 
 article,
@@ -224,10 +187,6 @@ footer {
   font-size: 20px;
   color: black;
   z-index: 20;
-  padding: 16px 15px;
-  background-color: #F21D44;
-  color: #fff;
-  border-radius: 50%;
   cursor: pointer;
 }
 .header .navbar-search:hover input {
@@ -240,6 +199,7 @@ footer {
 .header .navbar-search:hover .fa {
   border-radius: 0 30px 30px 0;
   transition: all 0.5s;
+  padding: 16px 15px;
   transform: translateX(-50%);
 }
 .header .nav-list {
@@ -247,23 +207,6 @@ footer {
   grid-column: span 8;
   display: flex;
   gap: 48px;
-}
-.header .nav-list a {
-  text-decoration: none;
-  color: #010D00;
-  line-height: 1.75rem;
-  font-weight: 500;
-  padding-bottom: 16px;
-}
-.header .nav-list a:hover {
-  color: #F21D44;
-  border-bottom: 1px solid #F21D44;
-  transition: all 0.3s ease-in;
-}
-.header .nav-list a:active {
-  color: #F21D44;
-  border-bottom: 1px solid #F21D44;
-  transition: all 0.3s ease-in;
 }
 
 .hero {
@@ -282,6 +225,13 @@ footer {
   -o-object-fit: cover;
      object-fit: cover;
 }
+.hero-content img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: right;
+     object-position: right;
+}
 .hero-content .col-2 {
   grid-column: 8/13;
   grid-row: 1/2;
@@ -290,12 +240,8 @@ footer {
   grid-column: 8/13;
   grid-row: 2/3;
 }
-.hero-content .col-3 img {
-  width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
 .hero-content .hero-card {
+  width: 100%;
   height: 100%;
   border-radius: 4px;
   position: relative;
@@ -344,9 +290,9 @@ footer {
 
 .wrapper {
   padding-top: 0;
+  grid-template-columns: 63% 60px auto;
   text-align: start;
   justify-items: start;
-  gap: 50px;
   align-items: flex-start;
 }
 .wrapper img {
@@ -356,7 +302,7 @@ footer {
 .wrapper .hot-topic {
   position: relative;
   display: grid;
-  grid-column: 1/9;
+  grid-column: 1/2;
   align-items: flex-start;
   grid-template-columns: repeat(12, 1fr);
 }
@@ -376,6 +322,8 @@ footer {
   grid-column: span 12;
 }
 .wrapper .hot-topic .swiper-slide {
+  height: 487px;
+  padding-top: 32px;
   justify-content: flex-start;
   gap: 20px;
   display: grid;
@@ -383,7 +331,6 @@ footer {
 }
 .wrapper .hot-topic .swiper-slide .hot-topic-feature {
   grid-column: span 7;
-  height: 520px;
   position: relative;
 }
 .wrapper .hot-topic .swiper-slide .hot-topic-feature img {
@@ -429,6 +376,7 @@ footer {
   line-height: 24px;
 }
 .wrapper .hot-topic .swiper-slide .fashion {
+  margin-top: -25px;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   place-items: center;
@@ -451,14 +399,6 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-.wrapper .hot-topic-title > h3 {
-  font-size: 1.25rem;
-  line-height: 2.5rem;
-  color: rgb(14, 19, 43);
-  position: relative;
-  font-weight: 600;
-  letter-spacing: -2%;
 }
 .wrapper .hot-topic-title .line {
   height: 2px;
@@ -497,6 +437,14 @@ footer {
 }
 .wrapper .hot-topic-title p .nav-link.active {
   color: #F21D44;
+}
+.wrapper .hot-topic h3 {
+  font-size: 1.25rem;
+  line-height: 2.5rem;
+  color: rgb(14, 19, 43);
+  position: relative;
+  font-weight: 600;
+  letter-spacing: -2%;
 }
 .wrapper .hot-topic .news {
   grid-column: 8/13;
@@ -546,7 +494,7 @@ footer {
 }
 
 .fashion {
-  grid-column: 9/13;
+  grid-column: 3/4;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -568,8 +516,13 @@ footer {
   background-color: #e4e4e4;
   width: 80%;
 }
+.fashion-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
 .fashion .feature {
-  margin-top: 25px;
+  margin-top: 30px;
   position: relative;
 }
 .fashion .feature img {
@@ -679,10 +632,10 @@ footer {
   color: rgba(24, 0, 31, 0.54);
 }
 .gallery-card {
+  grid-column: span 1;
   text-align: start;
   margin-top: 17px;
   position: relative;
-  height: 270px;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -719,19 +672,37 @@ footer {
   color: #F21D44;
   transition: all 0.3s ease-in;
 }
-.gallery-card-content .info {
+
+.info {
   display: flex;
-  justify-content: space-between;
+  gap: 10px;
   font-size: 0.75rem;
   line-height: 14px;
   color: white;
 }
-.gallery-card-content .info .fa {
+.info .fa {
   margin-right: 6px;
 }
 
+.links-container {
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
+  margin-top: 12px;
+}
+
 .blog-container {
-  gap: 30px;
+  display: flex;
+  gap: 45px;
+}
+
+h4 {
+  line-height: 2.5em;
+  letter-spacing: -2%;
+  color: rgb(14, 19, 43);
+  font-size: 1.5rem;
+  font-family: "roboto slab";
+  font-weight: 600;
 }
 
 .blog-catagories {
@@ -739,31 +710,26 @@ footer {
   gap: 12px;
   align-items: center;
 }
-.blog-catagories h4 {
-  line-height: 2rem;
-  letter-spacing: -2%;
-  color: rgb(14, 19, 43);
-  font-size: 1.5rem;
-  font-family: "roboto slab";
-  font-weight: 600;
+.blog-catagories .links-container {
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
+  margin-top: 22px;
 }
 .blog-catagories .line {
   display: block;
   height: 1px;
   background-color: rgb(228, 228, 228);
-  width: 60%;
+  width: 54%;
 }
 
 .news-links {
   align-items: center;
   text-align: start;
   display: flex;
-  gap: 10px;
+  gap: 24px;
 }
-.news-links:not(:nth-child(1)) {
-  margin-top: 15px;
-}
-.news-links:not(:nth-child(1)) img {
+.news-links img {
   border-radius: 4px;
 }
 .news-links .info {
@@ -773,7 +739,6 @@ footer {
   display: inline-block;
   color: rgb(14, 19, 43);
   text-decoration: none;
-  margin-top: 16px;
   font-family: "roboto slab";
   font-weight: 500;
   line-height: 24px;
@@ -839,40 +804,49 @@ footer {
   transition: all 0.3s ease-in;
 }
 
+.title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.title h3 {
+  font-size: 1.5rem;
+  line-height: 2.5rem;
+  font-family: 600;
+  color: #010D00;
+}
+.title .line {
+  height: 1px;
+  color: rgba(24, 0, 31, 0.54);
+}
+
 .overview {
   align-items: flex-start;
-  gap: 60px;
+  grid-template-columns: 63% 60px auto;
 }
 .overview .ov-links {
-  grid-column: 1/9;
+  grid-column: 1/2;
+}
+.overview .ov-links .links-container {
   display: flex;
   flex-direction: column;
   gap: 35px;
+  margin: 22px 0 0 0;
 }
 .overview-catagory {
-  gap: 12px;
-  display: flex;
-  align-items: center;
   position: relative;
   grid-column: 1/8;
-}
-.overview-catagory h4 {
-  font-size: 1.5rem;
-  font-weight: 500;
-  font-family: "roboto slab";
-  line-height: 2.5rem;
 }
 .overview-catagory .line {
   height: 1px;
   background-color: rgba(24, 0, 31, 0.54);
-  width: 60%;
+  width: 75%;
 }
 .overview .ov-card {
-  align-items: center;
-  display: flex;
-  justify-self: end;
-  gap: 16px;
-  text-align: start;
+  gap: 24px;
+}
+.overview .ov-card:nth-child(1) {
+  margin-top: 32px;
 }
 .overview .ov-card a {
   font-size: 1.5rem;
@@ -915,8 +889,8 @@ footer {
   letter-spacing: 0.02rem;
   line-height: 1.5rem;
   background-color: white;
-  margin: 120px 0 28px 0;
-  align-self: flex-start;
+  margin: 85px 0 28px 0;
+  align-self: center;
 }
 .overview .btn::after {
   content: "";
@@ -971,21 +945,12 @@ footer {
 .overview .tech {
   justify-content: start;
   text-align: start;
-  grid-column: 9/13;
-}
-.overview .tech-title {
+  grid-column: 3/4;
   display: flex;
-  align-items: center;
-  gap: 12px;
-}
-.overview .tech-title h3 {
-  font-size: 1.5rem;
-  line-height: 2.5rem;
-  font-family: 600;
-  color: #010D00;
+  flex-direction: column;
+  gap: 20px;
 }
 .overview .tech-title .line {
-  display: inline-block;
   height: 1px;
   width: 70%;
   background: rgb(14, 19, 43);
@@ -1003,7 +968,7 @@ footer {
   font-family: "roboto slab";
   font-weight: 500;
   line-height: 1.5rem;
-  padding: 14px 0 18px 0;
+  padding: 0 0 18px 0;
   display: block;
   color: white;
 }
@@ -1023,7 +988,7 @@ footer {
 }
 .overview .tech .card {
   position: relative;
-  margin-top: 22px;
+  margin-top: 2px;
 }
 .overview .tech .card .text {
   width: 100%;
@@ -1032,8 +997,8 @@ footer {
   bottom: 0px;
   background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
 }
-.overview .tech .ov-card {
-  margin-top: 20px;
+.overview .tech .card .text a {
+  margin-top: 14px;
 }
 .overview .tech .ov-card a {
   color: #010D00;
@@ -1046,38 +1011,39 @@ footer {
 .overview .tech .ov-card .info {
   color: rgba(24, 0, 31, 0.54);
   padding-top: 9px;
-}
-.overview .tech .tech-title h4 {
-  margin: 53px 0 47px 0;
-  font-size: 1.5rem;
-  font-family: "roboto slab";
-  font-weight: 600;
-  color: rgb(14, 19, 43);
-}
-.overview .tech .tech-title h4 .line {
-  height: 1px;
-  width: 80%;
-  color: rgba(24, 0, 31, 0.54);
+  display: flex;
+  gap: 0;
 }
 .overview .tech .tech-title .line {
   height: 1px;
-  width: 70%;
-  color: rgba(24, 0, 31, 0.54);
+  width: 80%;
 }
-.overview .tech .tech-title a:hover {
+.overview .tech-title .line {
+  width: 75%;
+}
+.overview .tech-title a:hover {
   color: #F21D44;
   transition: all 0.3s ease-in;
 }
-.overview .tech .popular-catagory {
+
+.tech .popular-catagory {
   display: flex;
   flex-direction: column;
 }
-.overview .tech .popular-catagory .list {
+.tech .popular-catagory .tech-title {
+  display: flex;
+  justify-content: space-between;
+  padding: 30px 0 47px 0;
+}
+.tech .popular-catagory .tech-title .line {
+  width: 25%;
+}
+.tech .popular-catagory .list {
   display: flex;
   flex-direction: column;
   gap: 24px;
 }
-.overview .tech .popular-catagory .table {
+.tech .popular-catagory .table {
   display: flex;
   justify-content: space-between;
   font-size: 1rem;
@@ -1085,40 +1051,33 @@ footer {
   font-weight: 400;
   color: rgb(14, 19, 43);
 }
-.overview .tech .popular-catagory .line {
-  width: 29%;
+.tech .popular-catagory .line {
+  width: 20%;
 }
-.overview .recent .tech-title {
-  margin-bottom: 0;
-}
-.overview .recent-post {
-  display: flex;
-  flex-direction: column;
+
+.recent {
   gap: 35px;
 }
-.overview .recent-post-card {
+.recent .tech-title {
+  margin: 44px 0 35px 0;
+}
+.recent-post-card {
   display: flex;
   align-items: center;
-  gap: 12px;
+  gap: 24px;
 }
-.overview .recent-post-card .text h4 a {
+.recent-post-card .text h4 a {
   color: #010D00;
-  font-size: 1rem;
-  line-height: 1.5rem;
-  margin-bottom: 9px;
   padding: 0;
 }
-.overview .recent-post-card .text h4 a:hover {
-  color: #F21D44;
-  transition: all 0.3s ease-in;
-}
-.overview .recent-post-card .text .date {
+.recent-post-card .text .date {
+  padding-top: 9px;
   display: inline-block;
   font-size: 0.75rem;
   font-weight: 400;
   color: rgba(24, 0, 31, 0.54);
 }
-.overview .recent-post-card .text .date i {
+.recent-post-card .text .date i {
   margin-right: 6px;
 }
 
@@ -1328,7 +1287,7 @@ footer {
     font-size: 15px;
   }
   .container {
-    padding: 0 90px;
+    padding: 0 100px;
   }
   .grid {
     grid-column: 1/13;
@@ -1406,6 +1365,13 @@ footer {
   .navbar .nav-list a:hover {
     color: white;
     border-bottom: 1px solid white;
+  }
+  .blog-container {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+  }
+  .blog-catagories .line {
+    display: none;
   }
   .overview .ov-card:not(:nth-child(1)) {
     margin-top: 47px;
@@ -1536,46 +1502,11 @@ footer {
   }
   .wrapper .hot-topic .swiper-slide .news img {
     width: 100%;
-    -o-object-fit: cover;
-       object-fit: cover;
     aspect-ratio: 16/9;
-  }
-  .wrapper .fashion {
-    grid-column: 1/span 12;
-    margin-top: 30px;
-    width: 100%;
-  }
-  .wrapper .fashion-title {
-    grid-column: span 12;
-  }
-  .wrapper .fashion .feature {
-    grid-column: span 12;
-  }
-  .swiper-wrapper {
-    grid-column: span 12;
-  }
-  .wrapper .hot-topic .news {
-    grid-column: span 12;
+    image-rendering: crisp-edges;
   }
   .header .navbar {
     width: 100vw;
-  }
-  .gallery .card1,
-.gallery .card2,
-.gallery .card3,
-.gallery .card4 {
-    grid-column: span 12;
-  }
-  .gallery .card1 img,
-.gallery .card2 img,
-.gallery .card3 img,
-.gallery .card4 img {
-    aspect-ratio: 16/12;
-    -o-object-fit: cover;
-       object-fit: cover;
-  }
-  .gallery-card img {
-    width: 100%;
   }
   .blog-fashion,
 .blog-lifestyle,
@@ -1592,6 +1523,9 @@ footer {
 @media (max-width: 600px) {
   html {
     font-size: 12px;
+  }
+  .line {
+    display: none;
   }
   .header .logo {
     padding-left: 30px;
@@ -1633,8 +1567,6 @@ footer {
   }
   .blog-lifestyle {
     margin: 20px 0;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
     gap: 12px;
   }
   .blog-catagories {
@@ -1647,6 +1579,12 @@ footer {
   }
   .news-links img {
     width: 100%;
+    aspect-ratio: 16/9;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: top;
+       object-position: top;
+    image-resolution: from-image 300dpi;
   }
   .overview .ov-card {
     flex-direction: column;
@@ -1657,8 +1595,10 @@ footer {
     aspect-ratio: 16/9;
     -o-object-fit: cover;
        object-fit: cover;
-    -o-object-position: top;
-       object-position: top;
+    -o-object-position: -50%, -50%;
+       object-position: -50%, -50%;
+    image-resolution: from-image 300dpi;
+    image-rendering: crisp-edges;
   }
   .overview .btn {
     margin-top: 20px;
@@ -1673,6 +1613,7 @@ footer {
     aspect-ratio: 16/9;
     -o-object-fit: cover;
        object-fit: cover;
+    image-resolution: from-image 300dpi;
   }
 }
 .wrapper .hot-topic .hot-topic-swiper.show {
